// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-node should add a new blogpost and update linkedNodes 1`] = `
Object {
  "author___NODE": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m",
  "body___NODE": "uzfinxahlog0___c1dHS3UzOqupJZY7AyeDc6sbodyTextNode",
  "children": Array [
    "uzfinxahlog0___c1dHS3UzOqupJZY7AyeDc6sdescriptionTextNode",
    "uzfinxahlog0___c1dHS3UzOqupJZY7AyeDc6sbodyTextNode",
  ],
  "contentful_id": "1dHS3UzOqupJZY7AyeDc6s",
  "createdAt": "2020-06-03T14:22:37.720Z",
  "description___NODE": "uzfinxahlog0___c1dHS3UzOqupJZY7AyeDc6sdescriptionTextNode",
  "heroImage___NODE": "uzfinxahlog0___c1aaRo2sQbdfWnG8iNvnkH3",
  "id": "uzfinxahlog0___c1dHS3UzOqupJZY7AyeDc6s",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulBlogPost",
  },
  "node_locale": "en-US",
  "parent": "Blog Post",
  "publishDate": "2020-04-01T00:00+02:00",
  "slug": "integration-tests",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "blogPost",
        "id": "blogPost",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
  },
  "title": "Integration tests",
  "updatedAt": "2020-06-03T14:22:37.720Z",
}
`;

exports[`gatsby-node should add a new blogpost and update linkedNodes 2`] = `
Object {
  "blog post___NODE": Array [
    "uzfinxahlog0___c31TNnjHlfaGUoMOwU0M2og",
    "uzfinxahlog0___c3K9b0esdy0q0yGqgW2g6Ke",
    "uzfinxahlog0___c2PtC9h1YqIA6kaUaIsWEQ0",
    "uzfinxahlog0___c1dHS3UzOqupJZY7AyeDc6s",
  ],
  "children": Array [
    "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0mshortBioTextNode",
  ],
  "company": "ACME",
  "contentful_id": "15jwOBqpxqSAOy2eOO4S0m",
  "createdAt": "2020-06-03T14:17:31.246Z",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m",
  "image___NODE": "uzfinxahlog0___c7orLdboQQowIUs22KAW4U",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulPerson",
  },
  "name": "John Doe",
  "node_locale": "en-US",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0mshortBioTextNode",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "person",
        "id": "person",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
  },
  "title": "Web Developer",
  "twitter": "johndoe",
  "updatedAt": "2020-06-03T14:17:31.246Z",
}
`;

exports[`gatsby-node should add a new blogpost and update linkedNodes 3`] = `
Object {
  "author___NODE": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m___nl",
  "body___NODE": "uzfinxahlog0___c1dHS3UzOqupJZY7AyeDc6s___nlbodyTextNode",
  "children": Array [
    "uzfinxahlog0___c1dHS3UzOqupJZY7AyeDc6s___nldescriptionTextNode",
    "uzfinxahlog0___c1dHS3UzOqupJZY7AyeDc6s___nlbodyTextNode",
  ],
  "contentful_id": "1dHS3UzOqupJZY7AyeDc6s",
  "createdAt": "2020-06-03T14:22:37.720Z",
  "description___NODE": "uzfinxahlog0___c1dHS3UzOqupJZY7AyeDc6s___nldescriptionTextNode",
  "heroImage___NODE": "uzfinxahlog0___c1aaRo2sQbdfWnG8iNvnkH3___nl",
  "id": "uzfinxahlog0___c1dHS3UzOqupJZY7AyeDc6s___nl",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulBlogPost",
  },
  "node_locale": "nl",
  "parent": "Blog Post",
  "publishDate": "2020-04-01T00:00+02:00",
  "slug": "integration-tests",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "blogPost",
        "id": "blogPost",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
  },
  "title": "Integration tests",
  "updatedAt": "2020-06-03T14:22:37.720Z",
}
`;

exports[`gatsby-node should add a new blogpost and update linkedNodes 4`] = `
Object {
  "blog post___NODE": Array [
    "uzfinxahlog0___c31TNnjHlfaGUoMOwU0M2og___nl",
    "uzfinxahlog0___c3K9b0esdy0q0yGqgW2g6Ke___nl",
    "uzfinxahlog0___c2PtC9h1YqIA6kaUaIsWEQ0___nl",
    "uzfinxahlog0___c1dHS3UzOqupJZY7AyeDc6s___nl",
  ],
  "children": Array [
    "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m___nlshortBioTextNode",
  ],
  "company": "ACME",
  "contentful_id": "15jwOBqpxqSAOy2eOO4S0m",
  "createdAt": "2020-06-03T14:17:31.246Z",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m___nl",
  "image___NODE": "uzfinxahlog0___c7orLdboQQowIUs22KAW4U___nl",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulPerson",
  },
  "name": "John Doe",
  "node_locale": "nl",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m___nlshortBioTextNode",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "person",
        "id": "person",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
  },
  "title": "Web Developer",
  "twitter": "johndoe",
  "updatedAt": "2020-06-03T14:17:31.246Z",
}
`;

exports[`gatsby-node should remove a blogpost and update linkedNodes 1`] = `
Object {
  "blog post___NODE": Array [
    "uzfinxahlog0___c31TNnjHlfaGUoMOwU0M2og",
    "uzfinxahlog0___c3K9b0esdy0q0yGqgW2g6Ke",
    "uzfinxahlog0___c2PtC9h1YqIA6kaUaIsWEQ0",
  ],
  "children": Array [
    "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0mshortBioTextNode",
  ],
  "company": "ACME",
  "contentful_id": "15jwOBqpxqSAOy2eOO4S0m",
  "createdAt": "2020-06-03T14:17:31.246Z",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m",
  "image___NODE": "uzfinxahlog0___c7orLdboQQowIUs22KAW4U",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulPerson",
  },
  "name": "John Doe",
  "node_locale": "en-US",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0mshortBioTextNode",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "person",
        "id": "person",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
  },
  "title": "Web Developer",
  "twitter": "johndoe",
  "updatedAt": "2020-06-03T14:17:31.246Z",
}
`;

exports[`gatsby-node should remove a blogpost and update linkedNodes 2`] = `
Object {
  "blog post___NODE": Array [
    "uzfinxahlog0___c31TNnjHlfaGUoMOwU0M2og___nl",
    "uzfinxahlog0___c3K9b0esdy0q0yGqgW2g6Ke___nl",
    "uzfinxahlog0___c2PtC9h1YqIA6kaUaIsWEQ0___nl",
  ],
  "children": Array [
    "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m___nlshortBioTextNode",
  ],
  "company": "ACME",
  "contentful_id": "15jwOBqpxqSAOy2eOO4S0m",
  "createdAt": "2020-06-03T14:17:31.246Z",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m___nl",
  "image___NODE": "uzfinxahlog0___c7orLdboQQowIUs22KAW4U___nl",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulPerson",
  },
  "name": "John Doe",
  "node_locale": "nl",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m___nlshortBioTextNode",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "person",
        "id": "person",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
  },
  "title": "Web Developer",
  "twitter": "johndoe",
  "updatedAt": "2020-06-03T14:17:31.246Z",
}
`;

exports[`gatsby-node should update a blogpost 1`] = `
Object {
  "author___NODE": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m",
  "body___NODE": "uzfinxahlog0___c1dHS3UzOqupJZY7AyeDc6sbodyTextNode",
  "children": Array [
    "uzfinxahlog0___c1dHS3UzOqupJZY7AyeDc6sdescriptionTextNode",
    "uzfinxahlog0___c1dHS3UzOqupJZY7AyeDc6sbodyTextNode",
  ],
  "contentful_id": "1dHS3UzOqupJZY7AyeDc6s",
  "createdAt": "2020-06-03T14:22:37.720Z",
  "description___NODE": "uzfinxahlog0___c1dHS3UzOqupJZY7AyeDc6sdescriptionTextNode",
  "heroImage___NODE": "uzfinxahlog0___c1aaRo2sQbdfWnG8iNvnkH3",
  "id": "uzfinxahlog0___c1dHS3UzOqupJZY7AyeDc6s",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulBlogPost",
  },
  "node_locale": "en-US",
  "parent": "Blog Post",
  "publishDate": "2020-05-15T00:00+02:00",
  "slug": "hello-world-1234",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "blogPost",
        "id": "blogPost",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 2,
  },
  "title": "Hello world 1234",
  "updatedAt": "2020-06-03T14:27:24.359Z",
}
`;

exports[`gatsby-node should update a blogpost 2`] = `
Object {
  "blog post___NODE": Array [
    "uzfinxahlog0___c31TNnjHlfaGUoMOwU0M2og",
    "uzfinxahlog0___c3K9b0esdy0q0yGqgW2g6Ke",
    "uzfinxahlog0___c2PtC9h1YqIA6kaUaIsWEQ0",
    "uzfinxahlog0___c1dHS3UzOqupJZY7AyeDc6s",
  ],
  "children": Array [
    "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0mshortBioTextNode",
  ],
  "company": "ACME",
  "contentful_id": "15jwOBqpxqSAOy2eOO4S0m",
  "createdAt": "2020-06-03T14:17:31.246Z",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m",
  "image___NODE": "uzfinxahlog0___c7orLdboQQowIUs22KAW4U",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulPerson",
  },
  "name": "John Doe",
  "node_locale": "en-US",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0mshortBioTextNode",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "person",
        "id": "person",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
  },
  "title": "Web Developer",
  "twitter": "johndoe",
  "updatedAt": "2020-06-03T14:17:31.246Z",
}
`;

exports[`gatsby-node should update a blogpost 3`] = `
Object {
  "author___NODE": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m___nl",
  "body___NODE": "uzfinxahlog0___c1dHS3UzOqupJZY7AyeDc6s___nlbodyTextNode",
  "children": Array [
    "uzfinxahlog0___c1dHS3UzOqupJZY7AyeDc6s___nldescriptionTextNode",
    "uzfinxahlog0___c1dHS3UzOqupJZY7AyeDc6s___nlbodyTextNode",
  ],
  "contentful_id": "1dHS3UzOqupJZY7AyeDc6s",
  "createdAt": "2020-06-03T14:22:37.720Z",
  "description___NODE": "uzfinxahlog0___c1dHS3UzOqupJZY7AyeDc6s___nldescriptionTextNode",
  "heroImage___NODE": "uzfinxahlog0___c1aaRo2sQbdfWnG8iNvnkH3___nl",
  "id": "uzfinxahlog0___c1dHS3UzOqupJZY7AyeDc6s___nl",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulBlogPost",
  },
  "node_locale": "nl",
  "parent": "Blog Post",
  "publishDate": "2020-05-15T00:00+02:00",
  "slug": "hello-world-1234",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "blogPost",
        "id": "blogPost",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 2,
  },
  "title": "Hello world 1234",
  "updatedAt": "2020-06-03T14:27:24.359Z",
}
`;

exports[`gatsby-node should update a blogpost 4`] = `
Object {
  "blog post___NODE": Array [
    "uzfinxahlog0___c31TNnjHlfaGUoMOwU0M2og___nl",
    "uzfinxahlog0___c3K9b0esdy0q0yGqgW2g6Ke___nl",
    "uzfinxahlog0___c2PtC9h1YqIA6kaUaIsWEQ0___nl",
    "uzfinxahlog0___c1dHS3UzOqupJZY7AyeDc6s___nl",
  ],
  "children": Array [
    "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m___nlshortBioTextNode",
  ],
  "company": "ACME",
  "contentful_id": "15jwOBqpxqSAOy2eOO4S0m",
  "createdAt": "2020-06-03T14:17:31.246Z",
  "email": "john@doe.com",
  "facebook": "johndoe",
  "github": "johndoe",
  "id": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m___nl",
  "image___NODE": "uzfinxahlog0___c7orLdboQQowIUs22KAW4U___nl",
  "internal": Object {
    "contentDigest": "contentDigest",
    "owner": "gatsby-source-contentful",
    "type": "ContentfulPerson",
  },
  "name": "John Doe",
  "node_locale": "nl",
  "parent": "Person",
  "phone": "0176 / 1234567",
  "shortBio___NODE": "uzfinxahlog0___c15jwOBqpxqSAOy2eOO4S0m___nlshortBioTextNode",
  "spaceId": "uzfinxahlog0",
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "contentful_id": "person",
        "id": "person",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "revision": 1,
  },
  "title": "Web Developer",
  "twitter": "johndoe",
  "updatedAt": "2020-06-03T14:17:31.246Z",
}
`;
